src/test/ui/error-codes/E0029.stderr
error[E0029]: only char and numeric types are allowed in range patterns
  --> $DIR/E0029.rs:5:9
   |
LL |         "hello" ..= "world" => {}
   |         ^^^^^^^^^^^^^^^^^^^ ranges require char or numeric types
   |
   = note: start type: &'static str
   = note: end type: &'static str

error: aborting due to previous error

For more information about this error, try `rustc --explain E0029`.
